# backend/libs/pickme/model/bag/Bag.js
@@ -7,10 +7,13 @@ class Bag {
    * @param {string} name The name of the bag.
    * @param {string} illustration Location of an illustration characterizing
    * the bag.
+   * @param {string} dueDate
+   * (optional) Time at which the bag must be ready packed. (ISO 8601 format)
    */
-  constructor(name, illustration) {
+  constructor(name, illustration, dueDate) {
     this.name = name;
     this.illustration = illustration;
+    this.dueDate = dueDate;
     this.content = [];
     this._id = undefined;
   }
