# backend/swagger.yaml
@@ -60,6 +60,10 @@ paths:
                     illustration:
                       type: string
                       description: The location of an illustration characterizing the bag.
+                    dueDate:
+                      type: string
+                      format: date-time
+                      description: (optional) Time at which the bag must be ready packed. (ISO 8601 format)
                     content:
                       type: array
                       items:
@@ -95,6 +99,10 @@ paths:
                 illustration:
                   type: string
                   description: The location of an illustration characterizing the bag.
+                dueDate:
+                  type: string
+                  format: date-time
+                  description: (optional) Time at which the bag must be ready packed. (ISO 8601 format)
                 content:
                   type: array
                   items:
@@ -126,6 +134,10 @@ paths:
                   illustration:
                     type: string
                     description: The location of an illustration characterizing the bag.
+                  dueDate:
+                    type: string
+                    format: date-time
+                    description: (optional) Time at which the bag must be ready packed. (ISO 8601 format)
                   content:
                     type: array
                     items:
@@ -151,26 +163,7 @@ paths:
               properties:
                 _id:
                   type: string
-                  description: |
-                    (optional) The unique ID of the bag. (This property is only
-                    required, if you want to update an existing bag.)
-                name:
-                  type: string
-                  description: The name of the bag.
-                illustration:
-                  type: string
-                  description: The location of an illustration characterizing the bag.
-                content:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      name:
-                        type: string
-                        description: The name of the item.
-                      state:
-                        type: boolean
-                        description: Describes whether the item is packed or not.
+                  description: The unique ID of the bag to be deleted.
       responses:
         '200':
           description: |
